Remove getNumberOfNodes